# Eidolune

./: .gitignore  CMakeLists.txt  README.md
Backend/backend/: api_views.py  serializers.py  settings.py  urls.py
Backend/core/: admin.py  forms.py  signals.py
Backend/core/migrations/: 0001_initial.py  0002_rename_auxiliarytype_card_auxilarytype.py  0002_trigger_event.py  0003_deck_validation_errors.py  0003_rename_auxilarytype_card_auxiliarytype.py  0004_alter_card_auxiliarytype_alter_card_cost_and_more.py  0004_remove_deck_validation_errors_card_character.py  0005_card_auxilarytype_card_classlock_and_more.py  0005_cardeffectbinding_targeting_rule.py  0006_keywordeffecttemplate.py  0006_user_user_data.py  0007_alter_deck_owner_usercharacterdata.py  0007_card_keywords.py  0008_alter_card_image_path_banner_banneritem.py  0008_cardeffectbinding_keyword_template.py  0009_remove_banner_featured_card_and_more.py  0009_remove_card_keywords.py  0010_alter_banneritem_unique_together.py  0011_cardeffectbinding_condition_value_and_more.py  0012_alter_cardeffectbinding_zone.py  0013_alter_cardeffectbinding_zone.py
Backend/core/models/: __init__.py  banner.py  card.py  cardeffectbinding.py  character.py  condition.py  deck.py  deckcard.py  effect.py  enums.py  faction.py  keywordeffecttemplate.py  relationship.py  subtype.py  trigger.py  usercharacterdata.py  users.py
Backend/core/services/: character_service.py  deck_service.py  export_service.py
Backend/static/js/: fill_keyword.js
Content/Cards/: cards.json
Content/Users/: user_1_decks.json
Source/Eidolune/Classes/: BloodboundClass.cpp  BloodboundClass.h  CharacterClass.h  GamblerClass.cpp  GamblerClass.h  MachinistClass.cpp  MachinistClass.h  OathboundClass.cpp  OathboundClass.h  ShadeClass.cpp  ShadeClass.h  SoulforgedClass.cpp  SoulforgedClass.h  SpecialistClass.cpp  SpecialistClass.h  SpellweaverClass.cpp  SpellweaverClass.h
Source/Eidolune/Core/: Card.cpp  Card.h  CardEffectBinding.cpp  CardEffectBinding.h  CardUtils.h  Character.cpp  Character.h  CharacterRelationship.cpp  CharacterRelationship.h  Condition.cpp  Condition.h  Deck.cpp  Deck.h  DeckCard.cpp  DeckCard.h  Effect.cpp  Effect.h  Equipment.cpp  Equipment.h  EquipmentSet.cpp  EquipmentSet.h  EventBus.h  Faction.cpp  Faction.h  GameCard.cpp  GameCard.h  GameState.cpp  GameState.h  Gear.cpp  Gear.h  GearEffectBinding.cpp  GearEffectBinding.h  InventoryItem.h  KeywordEffectTemplate.cpp  KeywordEffectTemplate.h  Player.cpp  Player.h  Position.h  Subtype.cpp  Subtype.h  (+6 more)
Source/Eidolune/Customization/: CharacterCustomization.cpp  CharacterCustomization.h  EquipmentSet.cpp  EquipmentSet.h  Gear.h  TalentNode.h  TalentTree.h
Source/Eidolune/Data/: UserCardData.cpp  UserCardData.h  UserCharacterData.cpp  UserCharacterData.h  UserData.cpp  UserData.h
Source/Eidolune/Deckbuilding/: DeckBuilder.cpp  DeckBuilder.h  DeckValidator.cpp  DeckValidator.h
Source/Eidolune/Definitions/: ConditionDefinitions.cpp  ConditionDefinitions.h  DeckRestrictionDefinitions.cpp  DeckRestrictionDefinitions.h  EffectDefinitions.cpp  EffectDefinitions.h  EffectHelpers.cpp  EffectHelpers.h  TriggerDefinitions.cpp  TriggerDefinitions.h
Source/Eidolune/Engine/: ConditionEvaluator.cpp  ConditionEvaluator.h  DeckValidator.h  EffectContext.cpp  EffectContext.h  GameActions.cpp  GameActions.h  GameEngine.cpp  GameEngine.h  Target.h  TriggerBuilder.cpp  TriggerBuilder.h  TriggerObserver.cpp  TriggerObserver.h
Source/Eidolune/Gacha/: Banner.cpp  Banner.h  Currency.h  Gacha.cpp  Gacha.h  GachaPool.cpp  GachaPool.h  GachaPullResult.cpp  GachaPullResult.h  PullTracker.h
Source/Eidolune/Http/: ApiClient.cpp  ApiClient.h
Source/Eidolune/Init/: CardUtils.cpp  CardUtils.h  Init.cpp  Init.h
Source/Eidolune/Loaders/: BannerLoader.cpp  BannerLoader.h  CardEffectBindingLoader.cpp  CardEffectBindingLoader.h  CardLoader.cpp  CardLoader.h  CharacterLoader.cpp  CharacterLoader.h  ConditionLoader.cpp  ConditionLoader.h  DeckCardLoader.cpp  DeckCardLoader.h  DeckLoader.cpp  DeckLoader.h  EffectLoader.cpp  EffectLoader.h  KeywordEffectTemplate.cpp  KeywordEffectTemplateLoader.h  SubtypeLoader.cpp  SubtypeLoader.h  TriggerLoader.cpp  TriggerLoader.h  UserDataLoader.cpp  UserDataLoader.h  UserLoader.cpp  UserLoader.h
Source/Eidolune/Main/: main.cpp
Source/Eidolune/Registry/: BannerRegistry.cpp  BannerRegistry.h  (+25 more)
supabase/: config.toml
(+38 files in other folders)
